# genevieve

./: .editorconfig  .gitignore  README.md  coverage.xml  noxfile.py  setup.cfg
.github/workflows/: deploy-workflow.yaml  test-workflow.yaml
genevieve/: __init__.py
test/: test.yaml  test_genevieve.py  xout_bash.txt  xout_pwsh.txt
