[metadata]
name = genevieve
author = Product Testing Technica Engineering GmbH
author_email = kjczarne@gmail.com
version = attr: genevieve.__version__
url = https://github.com/kjczarne/genevieve
description = 
    Generates env variable scripts for Bash and PowerShell
    to faciliatate operating on complex mulitplatform CI pipelines.
long_description = file: README.md
keywords = environment variables, bash, powershell, windows, linux, osx
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml
    dataclasses-jsonschema

[options.entry_points]
console_scripts =
    genevieve = genevieve:main

[options.extras_require]
dev = 
    pdoc
    flake8 
    twine
    setuptools
    autopep8

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 15
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241
